Tritao: File component refactored with more informations.